<resources>
    <string name="app_name">RDPP Law Firm</string>
    <string name="logo_text">RDPP Law Firm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="title_activity_main_screen_lawyer">MainScreen_Lawyer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firm_name">RDPP Law Firm</string>
    <string name="login">LOGIN</string>
    <string name="case_name">Case name</string>
    <string name="case_number">Case number</string>
    <string name="login_error_not_found">User not found, try again</string>
    <string name="login_error_empty_fields">One or more empty fields, try again</string>
    <string name="image_URL">https://s03.s3c.es/imag/_v0/770x420/3/e/b/600x400_juicio-mazo-balanza.jpg</string>
    <string name="add_new_cases_to_the_database">Add new cases to the database</string>
    <string name="case_details">Case details</string>
    <string name="case_name_add">Case name</string>
    <string name="add_new_case">ADD NEW CASE</string>
    <string name="lawyer_in_charge">Lawyer in Charge</string>
    <string name="case_added_correct">Case added successfully.</string>
    <string name="case_added_error">Case couldn\'t be added, try again</string>
    <string name="reg_Num_not_found">Lawyer registration number not found, try again</string>
    <string name="procedure">Procedure: </string>
    <string name="add_new_procedure">Add new procedure</string>
    <string name="procedure_details">Procedure details</string>
    <string name="executed_yes_or_no">Executed? (YES or NO)</string>
    <string name="save_procedure">Save procedure</string>
    <string name="date">Date :</string>
    <string name="details">Details :</string>
    <string name="executed">Executed :</string>
    <string name="add_a_new_procedure">ADD A NEW PROCEDURE</string>
    <string name="error_procedure_add_executed">You must enter \'YES\' or \'NO\'in the \'Executed\' field</string>
    <string name="error_procedure_not_saved">The adding of the procedure couldn\'t be done, try again</string>
</resources>