<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddCaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/add_new_cases_to_the_database"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/case_name_add"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text=""
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/case_details"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtLawyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/lawyer_in_charge"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_case"
            app:icon="@drawable/ic_save"
            android:layout_margin="15dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>