<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pop_up_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtProcedure"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_margin="25dp"
            android:text="@string/procedure"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="start"
            android:layout_margin="25dp"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtProcedure" />

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="start"
            android:layout_margin="25dp"
            android:text="@string/details"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDate" />

        <TextView
            android:id="@+id/txtExecuted"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="start"
            android:layout_margin="25dp"
            android:text="@string/executed"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDetails" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>