<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddProcedureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_a_new_procedure"
            android:textAlignment="center"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header_logo_foreground" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/date"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/inputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textAlignment="center">

        </com.google.android.material.textview.MaterialTextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/details"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDetails"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/executed_yes_or_no"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputExecuted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextExecuted"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="25dp"
            android:text="@string/add_new_procedure"
            app:icon="@drawable/ic_save" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>