<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:id="@+id/frameImage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal|center_vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:hint="@string/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputUser"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="46dp"
        android:fontFamily="monospace"
        android:text="@string/firm_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

</RelativeLayout>

